Bug 1818283: Make DOMMediaStream::TrackListener cycle-collected. r=pehrsons

This prevents HTMLMediaElements from being prematurely cycle-collected, and
also makes things a bit safer.

Differential Revision: https://phabricator.services.mozilla.com/D205734